<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/bg_blue"
        app:layout_constraintDimensionRatio="3:1.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="20dp">

    </View>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/swiper"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/status_bar_view"
        app:layout_constraintEnd_toEndOf="@+id/status_bar_view"
        app:layout_constraintStart_toStartOf="@+id/status_bar_view"
        app:layout_constraintTop_toTopOf="@+id/status_bar_view" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/account_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:civ_circle_background_color="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_view"
        app:layout_constraintWidth_percent="0.15"
        tools:src="@mipmap/ic_launcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/starbucks"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/account_icon"
        app:layout_constraintTop_toTopOf="@+id/account_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_blue_radius_4"
        android:paddingStart="12dp"
        android:paddingTop="2dp"
        android:paddingEnd="12dp"
        android:paddingBottom="2dp"
        android:text="@string/store"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/account_icon"
        app:layout_constraintStart_toStartOf="@+id/account_name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/notification_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_round_notifications_none_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/setting_icon"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_view"
        app:layout_constraintWidth_percent="0.08" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/setting_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_round_settings_24"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_bar_view"
        app:layout_constraintWidth_percent="0.08" />

    <com.google.android.material.card.MaterialCardView
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_icon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_call_to_action_24"
                android:drawablePadding="4dp"
                android:text="@string/event_code"
                android:textAlignment="center" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/pale_blue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_baseline_checkroom_24"
                android:drawablePadding="4dp"
                android:text="@string/partner_shop"
                android:textAlignment="center" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/pale_blue" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ec2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_round_shopping_basket_24"
                android:drawablePadding="4dp"
                android:text="@string/popular_shop"
                android:textAlignment="center" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/TabLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_bg"
        tools:background="@color/pale_blue" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>