<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:paddingBottom="12dp"
            tools:background="@color/pale_blue">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/coin_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/coin_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/icon"
                app:layout_constraintTop_toTopOf="@+id/icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/coin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/xnc_wallet"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/icon"
                app:layout_constraintStart_toEndOf="@+id/icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="9,102,219"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/coin_name"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/value2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text=".123"
                android:textSize="12sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/coin"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar"
                style="@style/ProgressBarHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="73"
                app:layout_constraintEnd_toStartOf="@+id/progress_text"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/icon" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="328天到期"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/progress_bar" />

            <View
                android:id="@+id/form_bg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_grey_radius_4"
                app:layout_constraintBottom_toBottomOf="@+id/reward3_title"
                app:layout_constraintEnd_toEndOf="@+id/value1"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/interactive_reward"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward1_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="26dp"
                android:text="+681.213"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/reward1_title"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/social_reward"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/reward1_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward2_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="+1.849"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/reward2_title"
                app:layout_constraintEnd_toEndOf="@+id/reward1_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/icon"
                app:layout_constraintTop_toBottomOf="@+id/reward2_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reward3_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="+1793.729"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/reward3_title"
                app:layout_constraintEnd_toEndOf="@+id/reward1_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/more_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/more_detail"
                android:textColor="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/form_bg" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>